# rkadapter-cpp

./: CMakeLists.txt  README.md  rdkafka.vcxproj  rdkafka.vcxproj.filters
include/: cmd_formatter.h  connection.h  errors.h  redis.cpp  redis_cluster.cpp  reply.h  rkadapter.h  sentinel.cpp  shards.cpp
include/hiredis/: hiredis.sln  redis_test.c  sds.h  test.c
include/no_tls/: tls.h
include/tls/: tls.cpp  tls.h
lib/: hiredis.lib  jsoncpp.lib
src/: rkadapter.cpp
